--- a/customer-registry.properties
+++ b/customer-registry.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/Customer
 spring.datasource.username=root
-spring.datasource.password=mounika2020
+spring.datasource.password=root
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
